fixed border radius on small-img-box

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1158,6 +1158,7 @@ h1.github {
     transition: 0.4s ease;
     /* Smooth transition */
     filter: grayscale(0%);
+    border-radius: 8px;
 }
 
 .small-img-box img {
@@ -1165,7 +1166,7 @@ h1.github {
     height: auto;
     display: block;
     border-radius: 8px;
-    transition: all 0.4s ease;
+    transition: filter 0.4s ease;
 }
 
 .small-img-box:hover img {
@@ -1222,7 +1223,7 @@ h1.github {
 /*det er flere hover med samme kode, må endrs, forksjell er backgorudn color som er viktig å ha med*/
 .small-img-box:hover {
     background-color: var(--beige);
-    border-radius: 10px;
+    border-radius: 8px;
     scale: 1.02;
     box-shadow: 0px 0px 10px 4px var(--shadow2);
     filter: grayscale(50%);
